# yt-feed-aggregator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CI.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CONTAINER_QUICKSTART.md  Containerfile  EXPORT_FEATURE.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SETUP_CICD.md  alembic.ini  compose.yaml  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  package-lock.json  pyproject.toml
.github/: QUICK_START.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: cb00d6ca5667_add_watched_videos_table.py  cf99ed2cc2c8_initial_migration_with_user_and_.py
app/: __init__.py  config.py  email_service.py  export_worker.py  logging.py  storage.py
app/api/: __init__.py  dependencies.py  routes_account.py  routes_feed.py  routes_health.py  routes_me.py  routes_subscriptions.py  routes_watched.py
app/auth/: __init__.py  crypto.py  router.py  security.py
app/db/: __init__.py  crud.py  models.py  session.py
app/feed/: __init__.py  aggregator.py
app/rss/: __init__.py  cache.py  models.py
app/youtube/: __init__.py  client.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
ops/: README.md  nginx_snippet.conf  podman_run.sh  update_and_restart.sh
tests/: __init__.py  test_account_endpoints.py  test_account_security.py  test_api_endpoints.py  test_auth_flow.py  test_config.py  test_db_models.py  test_feed_aggregator.py  test_rss_cache.py  test_watched_videos.py  test_youtube_client.py
(+12 files in other folders)
